--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>market-mosaic-online</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>PEPE Business Platform</title>
+    <meta name="description" content="Complete Business Management Platform - From SSM Registration to Payment Processing" />
+    <meta name="author" content="PEPE Platform" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
